// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the YoastTabs matches the snapshot 1`] = `
<div
  className="sc-bdVaJa gfkfZp"
>
  <div
    className="react-tabs"
    data-tabs={true}
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <ul
      className="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-1"
        aria-disabled="false"
        aria-selected="true"
        className="react-tabs__tab react-tabs__tab--selected"
        id="react-tabs-0"
        role="tab"
        tabIndex="0"
      >
        tab1
      </li>
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="false"
        className="react-tabs__tab"
        id="react-tabs-2"
        role="tab"
        tabIndex={null}
      >
        tab2
      </li>
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="false"
        className="react-tabs__tab"
        id="react-tabs-4"
        role="tab"
        tabIndex={null}
      >
        tab3
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-0"
      className="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-1"
      role="tabpanel"
      style={Object {}}
      tabIndex="0"
    >
      <p>
        This is some content for tab 1. 
        <a
          href="#"
        >
          focusable element 1
        </a>
      </p>
    </div>
    <div
      aria-labelledby="react-tabs-2"
      className="react-tabs__tab-panel"
      id="react-tabs-3"
      role="tabpanel"
      style={Object {}}
      tabIndex="0"
    />
    <div
      aria-labelledby="react-tabs-4"
      className="react-tabs__tab-panel"
      id="react-tabs-5"
      role="tabpanel"
      style={Object {}}
      tabIndex="0"
    />
  </div>
</div>
`;

exports[`the YoastTabs with props matches the snapshot 1`] = `
<div
  className="sc-bdVaJa bIOFWn"
>
  <div
    className="react-tabs"
    data-tabs={true}
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <ul
      className="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-7"
        aria-disabled="false"
        aria-selected="true"
        className="react-tabs__tab react-tabs__tab--selected"
        id="react-tabs-6"
        role="tab"
        tabIndex="0"
      >
        tab1
      </li>
      <li
        aria-controls="react-tabs-9"
        aria-disabled="false"
        aria-selected="false"
        className="react-tabs__tab"
        id="react-tabs-8"
        role="tab"
        tabIndex={null}
      >
        tab2
      </li>
      <li
        aria-controls="react-tabs-11"
        aria-disabled="false"
        aria-selected="false"
        className="react-tabs__tab"
        id="react-tabs-10"
        role="tab"
        tabIndex={null}
      >
        tab3
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-6"
      className="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-7"
      role="tabpanel"
      style={Object {}}
      tabIndex="0"
    >
      <p>
        This is some content for tab 1. 
        <a
          href="#"
        >
          focusable element 1
        </a>
      </p>
    </div>
    <div
      aria-labelledby="react-tabs-8"
      className="react-tabs__tab-panel"
      id="react-tabs-9"
      role="tabpanel"
      style={Object {}}
      tabIndex="0"
    />
    <div
      aria-labelledby="react-tabs-10"
      className="react-tabs__tab-panel"
      id="react-tabs-11"
      role="tabpanel"
      style={Object {}}
      tabIndex="0"
    />
  </div>
</div>
`;
